# toolit-architecture-decision-records

./: LICENSE  README.md  pyproject.toml
src/: architecture_decision_records.py  initial_adr.jinja2  new_adr.jinja2
src/templates/: new_adr.jinja2
